# president

./: .gitignore  BOT_MULTIPLAYER_VERIFICATION.md  MULTIPLAYER_SETUP.md  README.md  TESTING.md  app.py  app_test.py  ci_test.py  frontend.html  package-lock.json  package.json  president_python_full_spec.md  requirements.txt  run_all_tests.py  start_dev.sh  test-requirements.txt  test_app_integration.py  test_basic.py  test_bots_multiplayer.py  test_live_game.py  test_president_app.py  test_websocket.py  tests.py  tests_ui.py
engine_py/: Dockerfile  deploy.sh  koyeb.yaml  pyproject.toml  requirements.txt  test_engine.py
engine_py/src/president_engine/: __init__.py  bots.py  comparator.py  constants.py  diff.py  effects.py  engine.py  errors.py  exchange.py  main.py  models.py  ranking.py  rules.py  serialization.py  shuffle.py  start.py  validate.py  websocket_server.py
engine_py/src/president_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine_py/src/president_engine/bots/: __init__.py  base.py  greedy.py
engine_py/src/president_engine/tests/: test_basic.py  test_ranking.py  test_starting_rules.py
engine_py/src/president_engine/ws/: __init__.py  events.py  server.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
frontend/src/: env.example
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Card.tsx  ConnectionStatus.tsx  GameTable.tsx  Lobby.tsx  QuickStartInterface.tsx
frontend/src/store/: gameStore.ts
(+1 files in other folders)
